Applied border style and fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,19 @@
 body {
     font-family: sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     color: #ffffff;
     background-color: #222222;
-    line-height: 2em;
-    padding-left: 2em;
-    margin-left: 5em;
+    line-height: 1.2em;
+    margin: 1em 0em 1em;
 }
 header {
-    padding: 0.5em;
+    padding: 1em;
     text-align: center;
+    border-style: groove;
     background-color: #565656;
-    margin: 1em;
-    border-radius: 0.5em;
+    margin: 0.6em;
+    border-radius: 1.5em;
+    
 }
 header a{
     color: #ffffff;
@@ -24,9 +25,20 @@ body h2 {
     font-size: 1.2em;
 }
 body img{
+    margin-left: 0.6em;
+    margin-right: 2em;
     float: left;
-    border-radius: 1em;
-    margin: 0.5em;
+    border-style: groove;
+    border-radius: 1.5em;
+    background-color: #565656;
     max-height: 18em;
-    
+}
+#intro {
+    display: block;
+    border-style: groove;
+    border-radius: 1.5em;
+    background-color: #565656;
+    margin: 0.2em 0.8em 0.2em 20em;
+    text-align: justify;
+    padding: 0.2em 2.4em 0.8em 2.4em;
 }
